--- a/system_files/main.ui
+++ b/system_files/main.ui
@@ -86,7 +86,7 @@
       <x>0</x>
       <y>410</y>
       <width>651</width>
-      <height>71</height>
+      <height>87</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="show_address_layout">
@@ -109,11 +109,15 @@
      <x>0</x>
      <y>0</y>
      <width>652</width>
-     <height>21</height>
+     <height>19</height>
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
